# FracFeedExtractor

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: working_sw.yml
data/: labels.json
data/processed-text/: test.txt
documentation/: CONTRIBUTING.md
scripts/: ci_pipeline.py  download_from_drive.py  drive_io.py  env_loader.py  full_pipeline.py  run_pipeline.py
scripts/google_drive/: download_from_drive.py  drive_io.py
src/model/: pdf_classifier.py  train_model.py
src/model/model-config/: pdf_classifier_model.pkl
src/model/models/: tfidf_vectorizer.pkl
src/preprocessing/: data_loader.py  generate_labels.py  pdf_text_extraction.py
tests/: test_data_loader.py  test_generate_labels.py  test_pdf_classifier.py  test_pdf_extraction.py  test_train_model.py
