[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 200
target-version = ["py311"]
skip-string-normalization = true
exclude = '''
/(
    \.git
  | __pycache__
  | build
  | dist
  | venv
  | \.venv
  | \.mypy_cache
  | htmlcov
)/
'''

[tool.pytest.ini_options]
addopts = "-ra --disable-warnings"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
